kubernetes/deploy_svc_ingress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-desafio
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: app-desafio
    spec:
      containers:
      - name: app-desafio
        image: guimaraesasp/desafio-kubernetes:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc-desafio
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 30000
    name: http
  selector:
    app: app-desafio
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  rules:
  - host: idwall.local
    http:
      paths:
      - backend:
          serviceName: app-svc-desafio
          servicePort: 3000
        path: /desafio
